--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 
   <title>Reactions Demo</title>
   <link rel="stylesheet" type="text/css" href="design/reactions.css" media="all"/>
-<link rel="stylesheet" type="text/css" href="/vanilla/applications/dashboard/design/style.css?v=2.2a1.4" media="all"/>
+<link rel="stylesheet" type="text/css" href="http://tama63.co.uk/vanilla/applications/dashboard/design/style.css?v=2.2a1.4" media="all"/>
 <link rel="shortcut icon" href="http://tama63.co.uk/vanilla/uploads/favicon_acbafc5818df8575.ico" type="image/x-icon"/>
 <link rel="canonical" href="http://tama63.co.uk/vanilla/index.php?p=/discussion/3/dummy-announcement"/>
 <meta property="og:type" content="article"/>
