--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
 
   <title>Reactions Demo</title>
@@ -112,7 +112,6 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br/> te
     <span class="React lol">Funny</span><span class="React wow">Wow</span><span class=
     "React scholarly">Scholary</span>
   </div> </div>
-</div>
 </div>
 </div>
 </li>
